tests/typing/fail/if-bad-branchtypes.t20
;; Branch types must agree.

(: test Int)
(define test
  (if #t 42 #f))
